--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -42,6 +42,7 @@
   --top-save-btn-bg-img: url("../assets/save-icon.svg");
   --top-refresh-btn-bg-img: url("../assets/refresh-icon.svg");
   --arrow-dashboard-img: url("../assets/arrow-dashboard-light.svg");
+  --panel-container: var(--white-5);
 }
 
 [data-theme='light']{
@@ -65,6 +66,7 @@
   --top-save-btn-bg-img: url("../assets/save-btn.svg");
   --top-refresh-btn-bg-img: url("../assets/refreshy-icon.svg");
   --arrow-dashboard-img: url("../assets/arrow-dashboard-black.svg");
+  --panel-container: var(--white-9);
 }
 
 
@@ -292,10 +294,6 @@
 .editPanelMenu-unit-options input[type="checkbox"] {
   cursor: pointer;
 }
-
-/* .editPanelMenu-chart {
-  margin-bottom: 1rem;
-} */
 
 .dropDownTitle {
   background-color: var(--drop-down-btn-bg-regular);
@@ -1208,7 +1206,7 @@ input:checked + .slider:before {
 }
 #new-dashboard{
   padding: 0px  !important;
-  background-color: #F9FAFB !important;
+  background-color: var(--panel-container) !important;
 }
 .panel{
   border: 1px solid var(--border-color-regular) !important;
