--- a/static/css/siglens.css
+++ b/static/css/siglens.css
@@ -3748,7 +3748,7 @@ float: right;
     display: none;
     flex-direction: column;
     width: 100%;
-    height: ;
+    height: 100%;
     position: relative;
     padding: 20px;
 }
