--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -78,7 +78,6 @@
   flex-direction: column;
   padding: 1.5%;
   justify-content: space-between;
-  height: 100%;
 }
 
 /* PANEL-OPTIONS */
@@ -441,6 +440,7 @@
 
 .panelEditor-container {
   display: none;
+  flex-direction: column;
   width: 96vw;
   height: 96vh;
   background-color: var(--db-bg-color);
@@ -494,7 +494,8 @@
   align-items: center;
   width: 100%;
   justify-content: flex-end;
-  padding: 14px 0px 0px 0px;
+  padding: 14px 0px 14px 0px;
+  background-color: var(--db-bg-color);
 }
 
 .panEdit-btn {
@@ -1350,10 +1351,10 @@ input:checked + .slider:before {
 }
 .button-section{
   border-top: 1px solid var(--alerting-table-line-color);
-  position: absolute;
-  bottom: 0;
+  /* position: absolute; */
+  /* bottom: 0; */
   width: 100%;
-  margin-bottom: 14px;
+  flex-shrink: 0;
 }
 .ui-widget.ui-widget-content{
   z-index: 999;
@@ -1523,6 +1524,7 @@ input:checked + .slider:before {
   padding: 14px;
   padding-bottom: 0px;
   justify-content: space-between;
+  flex-shrink: 0;
 }
 .toggle-buttons div{
   padding-bottom: 6px;
